--- a/www/css/style13.css
+++ b/www/css/style13.css
@@ -75,7 +75,7 @@ header #logo span {
 }
 
 header #menuHead {
-	width: 44%;
+	width: 54%;
 	float: left;
 	margin-top: 30px;
 	margin-left: 2%;
@@ -88,6 +88,9 @@ header #menuHead div {
 	background-color: #c8c8c8;
 	border-radius: 10px;
 	color: #ffffff;
+	
+	position: relative;
+	display: inline-block;
 
 }
 
@@ -96,8 +99,9 @@ header #menuHead div:hover {
 
 }
 
+
 header #regAuth {
-	width: 30%;
+	width: 2	0%;
 	float: left;
 	text-align: right;
 	margin-top: 30px;
