--- a/www/css/style14.css
+++ b/www/css/style14.css
@@ -74,30 +74,100 @@ header #logo span {
 	color: #E9967A;
 }
 
-header #menuHead {
-	width: 44%;
-	float: left;
-	margin-top: 30px;
-	margin-left: 2%;
+#bar {
+  
+  
+  
+  height: 50px;
+  list-style: none;
+  margin: 20px auto;
+  padding: 0 10px;
+  width: 47%;
+  float:left;
+  margin-left:5%;
+}
+
+#bar > li {
+  float: left;
+  margin-right: 30px;
+  position: relative;
+}
+
+#bar > li > a {
+  color: #7d7f7d;
+  display: block;
+  font-weight: bold;
+  margin-right: 0;
+  padding: 15px 0;
+  text-decoration: none;
+  text-shadow: 0 -1px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all 0.25s;
+}
+
+.menu .submenu {
+  background: #fff;
+  border-radius: 0px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+  left: -12px;
+  list-style: none;
+  margin: 0;
+  opacity: 0;
+  padding: 0;
+  position: absolute;
+  top: 38px;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+  visibility: hidden;
+  width: 200px;
+}
+
+.no-js .menu:hover .submenu,
+.menu-hover:hover .submenu,
+.menu-click.menu-active .submenu {
+  opacity: 1;
+  top: 100%;
+  visibility: visible;
+}
+
+.menu .submenu:before,
+.menu .submenu::before {
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid white;
+  content: "";
+  height: 0;
+  left: 24px;
+  position: absolute;
+  top: -6px;
+  width: 0;
+}
+
+.menu .submenu li {
+  border-bottom: 1px solid #EBEBEB;
+  padding: 7px 10px;
+}
+
+.menu .submenu li:last-child {
+  border-bottom: none;
+}
+
+.menu .submenu a {
+  color: #777;
+  display: inline-block;
+  line-height: 1.2em;
+  padding: 5px 0;
+  text-decoration: none;
+}
+
+.menu .submenu a:hover {
+   color: #3F5883; 
 }
 
 
-header #menuHead div {
-	float: left;
-	padding: 5px;
-	background-color: #c8c8c8;
-	border-radius: 10px;
-	color: #ffffff;
 
-}
-
-header #menuHead div:hover {
-	 	background-color: #e7e7e7;
-
-}
 
 header #regAuth {
-	width: 30%;
+	width: 20%;
 	float: left;
 	text-align: right;
 	margin-top: 30px;
@@ -131,7 +201,13 @@ header #regAuth {
 	margin-bottom: 10px;
 }
 
-#wrapper #leftCol #lastArticle h2{
+#wrapper #leftCol #lastArticle p, #wrapper #leftCol .prevArticle p {
+	width: 90%;
+	margin-left: 5%;
+}
+
+
+#wrapper #leftCol #lastArticle h2, #wrapper #leftCol .prevArticle h2 {
 	font-family: COMIC SANS MS, sans-serif;
 	margin-bottom: 5px;
 	font-size: 1.4em;
@@ -139,7 +215,8 @@ header #regAuth {
 }
 
 
-#wrapper #leftCol .prevArticle{
+
+#wrapper #leftCol .prevArticle {
 	width: 40%;
 	margin-left: 5%;
 	background-color: #f6f6f6;
@@ -147,7 +224,7 @@ header #regAuth {
 	float: left;
 }
 
-.nextStage a{
+#wrapper #leftCol #lastArticle div.nextStage, #wrapper #leftCol .prevArticle div.nextStage {
 	float: left;
 	padding: 5px;
 	background-color: #636363;
@@ -156,7 +233,9 @@ header #regAuth {
 	margin-top: 5px;
 }
 
-.nextStage a:hover{
+
+
+#wrapper #leftCol #lastArticle div.nextStage:hover, #wrapper #leftCol .prevArticle div.nextStage:hover {
 	color: #ffffff;
 	background-color: #c8c8c8;
 
@@ -167,14 +246,22 @@ header #regAuth {
 #wrapper #rightCol{
 	width: 20%;
 	float: left;
+	border-top:13%;
+}
+
+#wrapper #rightCol li{
+	margin-bottom: 4%;
+	list-style: none;
+	border-top: 1px solid silver;
+
+}
+#wrapper #rightCol li i:before{
+	content: "\203A";
+	margin-left: 10%;
+
 }
 
 
-#wrapper #rightCol .banner{
-	float: left;
-	width: 100%;
-	margin-bottom: 20px;
-}
 
 /* Styles for footer */
 
