--- a/www/css/style3.css
+++ b/www/css/style3.css
@@ -74,100 +74,30 @@ header #logo span {
 	color: #E9967A;
 }
 
-#bar {
-  
-  
-  
-  height: 50px;
-  list-style: none;
-  margin: 20px auto;
-  padding: 0 10px;
-  width: 47%;
-  float:left;
-  margin-left:5%;
-}
-
-#bar > li {
-  float: left;
-  margin-right: 30px;
-  position: relative;
-}
-
-#bar > li > a {
-  color: #7d7f7d;
-  display: block;
-  font-weight: bold;
-  margin-right: 0;
-  padding: 15px 0;
-  text-decoration: none;
-  text-shadow: 0 -1px rgba(0, 0, 0, 0.25);
-  -webkit-transition: all 0.25s;
-}
-
-.menu .submenu {
-  background: #fff;
-  border-radius: 0px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-  left: -12px;
-  list-style: none;
-  margin: 0;
-  opacity: 0;
-  padding: 0;
-  position: absolute;
-  top: 38px;
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-  visibility: hidden;
-  width: 200px;
-}
-
-.no-js .menu:hover .submenu,
-.menu-hover:hover .submenu,
-.menu-click.menu-active .submenu {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.menu .submenu:before,
-.menu .submenu::before {
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid white;
-  content: "";
-  height: 0;
-  left: 24px;
-  position: absolute;
-  top: -6px;
-  width: 0;
-}
-
-.menu .submenu li {
-  border-bottom: 1px solid #EBEBEB;
-  padding: 7px 10px;
-}
-
-.menu .submenu li:last-child {
-  border-bottom: none;
-}
-
-.menu .submenu a {
-  color: #777;
-  display: inline-block;
-  line-height: 1.2em;
-  padding: 5px 0;
-  text-decoration: none;
-}
-
-.menu .submenu a:hover {
-   color: #3F5883; 
+header #menuHead {
+	width: 54%;
+	float: left;
+	margin-top: 30px;
+	margin-left: 2%;
 }
 
 
+header #menuHead div {
+	float: left;
+	padding: 5px;
+	background-color: #c8c8c8;
+	border-radius: 10px;
+	color: #ffffff;
 
+}
+
+header #menuHead div:hover {
+	 	background-color: #e7e7e7;
+
+}
 
 header #regAuth {
-	width: 20%;
+	width: 10%;
 	float: left;
 	text-align: right;
 	margin-top: 30px;
@@ -175,68 +105,9 @@ header #regAuth {
 
 /* Styles for content */
 #wrapper {
-	width: 99%;
-	margin-left: 1%;
+	width: 80%;
+	margin-left : 10%;
 	float: left;
-}
-
-
-/* Styles for left column  on index*/
-
-#wrapper #doctors {
-	width: 70%;
-	margin-left: 1%;
-	margin-right: 1%;
-	margin-top: 5%;
-	float: left;
-	border: 2px solid silver;
-	padding-top: 3%;
-	padding-left: 3%;
-	padding-bottom: 3%
-}
-
-#wrapper #doctors .doctor-items {
-	width: 16%;
-	float: left;
-	margin-right: 9%;
-	}
-
-#wrapper #doctors .doctor-items .pic {
-	width: 100%;
-	float:left;
-
-}
-
-#wrapper #Doctor-profile {
-	width: 76%;
-	margin-top: 2%;
-	float: left;
-	padding-left: 3%;
-	padding-bottom: 3%
-}
-
-#wrapper #Doctor-profile #block_pic  {
-	width: 30%;
-	float: left;
-	margin-right: 2%;
-
-}
-
-#wrapper #Doctor-profile #block_pic img {
-	width: 100%;
-
-}
-
-#wrapper #Doctor-profile #block_info {
-	width: 68%;
-	float: left;
-}
-#wrapper #Doctor-profile #block_info li {
-	list-style: none;
-}
-#wrapper #Doctor-profile #block_info li i:before {
-	content: "\203A";
-	margin-right: 2%;
 }
 /* Styles for left column */
 
@@ -305,24 +176,14 @@ header #regAuth {
 #wrapper #rightCol{
 	width: 20%;
 	float: left;
-	margin-top:2%;
-}
-
-#wrapper #rightCol li{
-	margin-bottom: 4%;
-	list-style: none;
-	border-top: 1px solid silver;
-
-}
-#wrapper #rightCol li i:before{
-	content: "\203A";
-	margin-left: 10%;
 }
 
 
-
-
-
+#wrapper #rightCol .banner{
+	float: left;
+	width: 100%;
+	margin-bottom: 20px;
+}
 
 /* Styles for footer */
 
