--- a/www/css/style14.css
+++ b/www/css/style14.css
@@ -70,14 +70,7 @@ header #logo a {
 
 }
 
-header #logo span {
-	color: #E9967A;
-}
-
 #bar {
-  
-  
-  
   height: 50px;
   list-style: none;
   margin: 20px auto;
@@ -102,7 +95,7 @@ header #logo span {
   text-decoration: none;
   text-shadow: 0 -1px rgba(0, 0, 0, 0.25);
   -webkit-transition: all 0.25s;
-}
+}		
 
 .menu .submenu {
   background: #fff;
@@ -179,17 +172,25 @@ header #regAuth {
 	margin-left: 1%;
 	float: left;
 }
-
+#wrapper #slider {
+	width: 96%;
+	margin-left :2%;
+	margin-right: 2%;
+	height: 100%	;
+}
+#wrapper #slider img {
+	width: auto;
+	height: 300px;
+}
 
 /* Styles for left column  on index*/
 
 #wrapper #doctors {
 	width: 70%;
 	margin-left: 1%;
-	margin-right: 1%;
+	margin-right: 6%;
 	margin-top: 5%;
 	float: left;
-	border: 2px solid silver;
 	padding-top: 3%;
 	padding-left: 3%;
 	padding-bottom: 3%
@@ -234,10 +235,58 @@ header #regAuth {
 #wrapper #Doctor-profile #block_info li {
 	list-style: none;
 }
+
+#wrapper #Doctor-profile #block_info div {
+	width: 15%;
+	float:left;
+
+}
+
 #wrapper #Doctor-profile #block_info li i:before {
 	content: "\203A";
 	margin-right: 2%;
 }
+
+#wrapper #News_Back_Form_Contacts {
+	float:left;
+	margin-top: 3%;
+	width: 90%;
+	margin-right: 5%;
+	margin-left:4%;
+}
+
+#wrapper #News_Back_Form_Contacts #Our_news {
+	width: 29%;
+	float:left;
+	margin-right: 3%;
+}
+#wrapper #News_Back_Form_Contacts #Our_news ul{
+	
+	list-style-type: none;
+}
+
+#wrapper #News_Back_Form_Contacts #Our_news ul li{
+	border-bottom: 1px solid silver;
+}
+
+#wrapper #News_Back_Form_Contacts #Our_news ul a {
+	color: #333333;
+	text-decoration: none;
+}
+#wrapper #News_Back_Form_Contacts #Our_news ul a:hover {
+	color: #d38484;
+	text-decoration: none;
+}
+#wrapper #News_Back_Form_Contacts .our_blocks {
+	width: 29%;
+	float:left;
+	padding: 1%;
+	margin-right: 3%;
+	border: 1px solid silver
+}
+
+	list-style-type: none;
+
 /* Styles for left column */
 
 #wrapper #leftCol{
@@ -245,6 +294,20 @@ header #regAuth {
 	margin-right: 10%;
 	float: left;
 }
+
+#wrapper #leftCol #forFrame {
+	margin: 5%;
+}
+
+#wrapper #leftCol .our_blocks {
+	padding: 1%;
+	width: 25%;
+	float:left;
+	border: 1px solid silver ;
+	margin: 3%;
+}
+
+
 
 #wrapper #leftCol #lastArticle{
 	width: 78%;
